--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <canvas class="webgl"></canvas>
     <section id="loading-screen">
+      <p id="loaderText">Loading: 0%</p>
       <div id="loader"></div>
     </section>
   </body>
